--- a/PracticeEmployeeWage/PracticeEmployeeWage.csproj
+++ b/PracticeEmployeeWage/PracticeEmployeeWage.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SwitchCase.cs" />
+    <Compile Include="WageTillCondition.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
